<?xml version="1.0"?>
<package>
  <name>hector_thermal_image_conversion</name>
  <version>0.0.0</version>
  <description>The heat_image_translation package</description>

  <maintainer email="christian.j.rose@gmx.de">Christian Rose</maintainer>

  <author email="christian.j.rose@gmx.de">Christian Rose</author>
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
